--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -239,7 +239,7 @@ SupportScreen As screen:
                     Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                     Text: |-
                         ="Should you experience any issues while using the App or submitting a lead, specialized tech support is also available between 9AM-1PM EST on Monday, Wednesday and Friday."
-                         & Char(10) & "Please email wallabh.sardesai@schindler.com /kishan.mahajan@quantumintegrators.com. If additional assistance is needed, please contact 1-800-123-4567 during the above support hours."
+                         & Char(10) & "Please email wallabh.sardeshmukh@quantumintegrators.com /kishan.mahajan@quantumintegrators.com."
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width-20
                     X: =10
