--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.337",
+    "DocVersion": "1.339",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -29,6 +29,7 @@
       "dataverseactionsenabled": false,
       "delaycontrolrendering": true,
       "delayloadscreens": true,
+      "disablebehaviorreturntypecheck": false,
       "disablecdsfileandlargeimage": false,
       "disableruntimepolicies": false,
       "dynamicschema": false,
@@ -42,9 +43,7 @@
       "enableeditcacherefreshfrequency": false,
       "enableeditinmcs": false,
       "enableexcelonlinebusinessv2connector": true,
-      "enableexperimentaldataverseoffline": false,
       "enableideaspanel": true,
-      "enablelargefilesindataverseoffline": false,
       "enablelegacybarcodescanner": false,
       "enableonstart": true,
       "enableonstartnavigate": false,
@@ -102,7 +101,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 2,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
@@ -118,13 +117,13 @@
     "Id": "a2274f5f-f78c-407d-825c-ec1a769dffe8",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "QQ Team App DEV Environment",
+    "Name": "QQ Team App",
     "OriginatingVersion": "1.326",
-    "ParserErrorCount": 0,
+    "ParserErrorCount": 2,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "QQ Team App DEV Environment",
+    "AppName": "QQ Team App",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
