--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -135,18 +135,17 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =["Value"]
+                            DisplayFields: =[""]
                             InputTextPlaceholder: ="Select District"
+                            IsSearchable: =false
                             Items: |-
-                                =Distinct(Filter(LeadInformations,Territory=cmbxregionfilterLS.Selected.Value),District)
+                                =Distinct(Filter(LeadInformations,Territory=cmbxregionfilterLS.Selected.Value,District),District)
                                 //Distinct(LeadInformations,District)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =["Value"]
-                            SearchItems: |-
-                                =Search(Distinct(Filter(LeadInformations,Territory=cmbxregionfilterLS.Selected.Value),District)
-                                //Distinct(LeadInformations,District),cmbxdistrictfilterLS.SearchText,"Value")
+                            SearchFields: =[""]
+                            SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =cmbxregionfilterLS.X+cmbxregionfilterLS.Width+5
@@ -157,18 +156,17 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =["Value"]
+                            DisplayFields: =[""]
                             InputTextPlaceholder: ="Select Territory"
+                            IsSearchable: =false
                             Items: |-
-                                =Distinct(Filter(LeadInformations,Area=cmbxareafilterLS.Selected.Value),Territory)
+                                =Distinct(Filter(LeadInformations,Area=cmbxareafilterLS.Selected.Value,Territory),Territory)
                                 //Distinct(LeadInformations,Territory)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =["Value"]
-                            SearchItems: |-
-                                =Search(Distinct(Filter(LeadInformations,Area=cmbxareafilterLS.Selected.Value),Territory)
-                                //Distinct(LeadInformations,Territory),cmbxregionfilterLS.SearchText,"Value")
+                            SearchFields: =[""]
+                            SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
