--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -135,16 +135,15 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =[""]
+                            DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select District"
-                            IsSearchable: =false
                             Items: |-
                                 =Distinct(Filter(LeadInformations,Territory=cmbxregionfilterLS.Selected.Value,District),District)
                                 //Distinct(LeadInformations,District)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =[""]
+                            SearchFields: =["Value"]
                             SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             Width: =200
@@ -156,16 +155,15 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =[""]
+                            DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select Territory"
-                            IsSearchable: =false
                             Items: |-
                                 =Distinct(Filter(LeadInformations,Area=cmbxareafilterLS.Selected.Value,Territory),Territory)
                                 //Distinct(LeadInformations,Territory)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =[""]
+                            SearchFields: =["Value"]
                             SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
