--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -46,6 +46,10 @@ LeadScreen As screen:
                 HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                 OnSelect: |-
                     =Set(VarPopUpInprogress,false);
+                    Reset(cmbxregionfilterLS);
+                    Reset(cmbxdistrictfilterLS);
+                    Reset(cmbxareafilterLS);
+                    Reset(txtinptsearchLS);
                     //Reset(txtinptestimatenumber);
                     Navigate(LeadListScreen)
                 PressedFill: =//Self.Color
