--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.338",
+    "DocVersion": "1.339",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -117,13 +117,13 @@
     "Id": "9d662df8-091d-4444-8272-05db92ce280a",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "Technician App",
+    "Name": "SEC Lead Generation App",
     "OriginatingVersion": "1.331",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "Technician App",
+    "AppName": "SEC Lead Generation App",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
