--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -111,7 +111,7 @@ DashboardScreen As screen:
                     FontWeight: =FontWeight.Semibold
                     Height: =60
                     Size: =24
-                    Text: ="Open Leads"
+                    Text: ="All Open Leads"
                     Width: =Parent.Width
                     Y: =Parent.Height/3.5
                     ZIndex: =1
