--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -515,11 +515,12 @@ LeadListScreen As screen:
                             ZIndex: =5
 
                         rectvertLS As rectangle:
-                            BorderThickness: =1
-                            Fill: =If(ThisItem.LeadStatus="Submitted",RGBA(39,113,194,1),ThisItem.LeadStatus="Inprogess",RGBA(54,176,75,1),ThisItem.LeadStatus="Reject",RGBA(255,0,0,1))
+                            BorderColor: =RGBA(109, 49, 162, 1)
+                            Fill: =If(ThisItem.LeadComment="This lead is Rejected because it's status in FP Estimate is Dead",RGBA(39, 113, 194, 1),ThisItem.LeadComment="This lead is Rejected because it's status in FP Estimate is Lost",RGBA(109, 49, 162, 1),RGBA(0,0,0,0))
                             Height: =ctnlistheadingvalueLS.Height-10
-                            Width: =3
-                            X: =10
+                            Visible: =If(ThisItem.LeadComment="This lead is Rejected because it's status in FP Estimate is Dead" || ThisItem.LeadComment="This lead is Rejected because it's status in FP Estimate is Lost",true,false)
+                            Width: =4
+                            X: =2
                             ZIndex: =6
 
                 ctnlistheadingLS As groupContainer.horizontalAutoLayoutContainer:
