--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -300,7 +300,7 @@ LeadListScreen As screen:
                         ="Note:1) Search by QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No.
                                   2) Click on specific lead to see details."
                     VerticalAlign: =VerticalAlign.Top
-                    Width: =Parent.Width
+                    Width: =Parent.Width/1.8
                     X: =10
                     Y: =10
                     ZIndex: =1
